2025-04-10_elk_cez/argocd-apps-cez-example/apps/cez/elk/manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elk
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - es.k8s.sikademo.com
        - kb.k8s.sikademo.com
      secretName: elk-tls
  rules:
    - host: es.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-es-http
                port:
                  number: 9200
    - host: kb.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elk-kb-http
                port:
                  number: 5601
